src/main/java/com/example/stream/spring/courses/reactive/example/model/error/DepartmentNotFound.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record DepartmentNotFound() implements DepartmentError {
}
